fix on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -42,10 +42,6 @@ img{
   .container { width: 100%; padding: 0 15px; }
 }
 
-.hero--info{
-    height: 700px;
-}
-
 ul{
     height: 151px;
 }
